--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -349,6 +349,7 @@ body {
 
 .list-sidebar-focus {
   background-color: #f52b54;
+  color: white;
 }
 
 .list-sidebar-jotform[aria-expanded="true"] {
