--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -147,7 +147,7 @@
     -ms-user-select: none;
     user-select: none;
     background-color: transparent;
-    border: 1px solid inherit;
+    border: 1px solid transparent !important;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
