--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -51,12 +51,12 @@
 
 .login-here {
     cursor: pointer;
-    color: #dc143c;
+    color: #dc143c !important;
 }
 
 .login-here:hover {
     cursor: pointer;
-    color: #f52b54;
+    color: #f52b54 !important;
 }
 
 .brand-logo1 img {
