--- a/src/css/vertical-layout-light/style.css
+++ b/src/css/vertical-layout-light/style.css
@@ -10995,6 +10995,7 @@ textarea.form-control-lg {
   border: 1px solid rgba(0, 0, 0, 0.25);
   appearance: none;
   color-adjust: exact;
+  margin-left: -0.25rem !important;
 }
 
 .form-check-input[type="checkbox"] {
@@ -13214,7 +13215,7 @@ fieldset:disabled .wizard > .actions a,
 .navbar-brand {
     display: inline-block;
     /* padding-top: 0; */
-    /* padding-bottom: 0.3125rem; */
+    padding-bottom: 0.125rem !important;
     /* margin-right: 1rem; */
     font-size: 1.25rem;
     line-height: inherit;
