thank you page editor

--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -128,8 +128,8 @@ input {
 
 .select-box-dark {
     color: white;
-    background: #232227;
-    border: 1px solid white;
+    background: #343a40;
+    border: 1px solid #d0e3e9;
 }
 
 .search-input-div {
