--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -1197,7 +1197,7 @@ body {
 
 .select_dark {
   background: rgb(30, 40, 61) !important;
-  border: 1px solid #fff !important;
+  border: 1px solid #ced4da !important;
   color: #fff !important;
 }
 
