--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -476,10 +476,10 @@
   padding: 4px;
 }
 
-.icon-span:hover {
-  background-color: #0ab2e6 !important;
-  border-color: #0ab2e6 !important;
-}
+// .icon-span:hover {
+//   background-color: #0ab2e6 !important;
+//   border-color: #0ab2e6 !important;
+// }
 
 .send_icon {
   width: 20px;
@@ -495,10 +495,10 @@
   color: #fff;
 }
 
-.fill-form:hover {
-  background-color: #0ab2e6 !important;
-  border-color: #0ab2e6 !important;
-}
+// .fill-form:hover {
+//   background-color: #0ab2e6 !important;
+//   border-color: #0ab2e6 !important;
+// }
 
 .formpage_item {
   margin-left: 00px;
