--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -128,7 +128,7 @@ input {
 
 .select-box-dark {
     color: white;
-    background: #343a40;
+    background: #343a40 !important;
     border: 1px solid #d0e3e9;
 }
 
