--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -535,7 +535,7 @@ padding-bottom: 0 !important;
 }
 
 .inbox-list-focus1 {
-    background-color: transparent !important;
+    background-color: #ffffff !important;
     color: #616161 !important;
 }
 
