--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -991,10 +991,10 @@ body {
 // .btn{
 
 // }
-.css-1s2u09g-control {
-  padding-right: 200px !important;
-  padding-left: 200px !important;
-}
+// .css-1s2u09g-control {
+//   padding-right: 200px !important;
+//   padding-left: 200px !important;
+// }
 
 .Main_bg:hover {
   background-color: #09f !important;
