--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -85,7 +85,7 @@
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
 .input-login:focus{
-    border: 1px solid #000000 !important;
+    border: 2px solid black !important;
     box-shadow: none !important;
 }
 
