--- a/src/css/vertical-layout-light/_formanalytics.scss
+++ b/src/css/vertical-layout-light/_formanalytics.scss
@@ -39,7 +39,7 @@
 //   color: white !important;
 // }
 .nav-tabs .nav-link {
-  color: #616161;
+  color: #dc143c;
 }
 .tab-content{
   border: none;
