--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -1262,7 +1262,9 @@ body {
   left: 27px;
   top: 3px;
 }
+
 /* Media Query for Mobile Devices */
+
 @media (max-width: 480px) {
   .settingsidbar-desk {
     display: none !important;
@@ -1287,9 +1289,13 @@ body {
   .form-set-main-div-mob {
     width: 100%;
   }
+  .set_margin_mob {
+    margin: 10px 0px 0px 0px;
 }
 
+}
 
+/* Media Query for tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .setting_form_ml_mob {
     margin-left: 200px !important;
@@ -1309,5 +1315,34 @@ preview-div-switch-tab {
 }
 .jot-link-tab {
   padding: 1rem 1rem 1.15rem !important;
+}
+.preview-para-tab {
+  position: relative;
+  right: 36px;
+}
+.preview-toggle-tab{
+  flex-basis: 98%;
+  top: 11px;
+  text-align: left;
+  padding-left: 20px;
+}
+.prev-position-tab{
+  position: unset;
+  flex-basis: 45%;
+}
+// .set_margin_mob{
+//   position: relative;
+//     top: -25px;
+//     left: 32px;
+// }
+.set_margin_mob{
+  margin: 25px 0px 0px 284px;
+}
+}
+
+/* only for laptop screen */
+@media (min-width: 1024px) and (max-width: 1024px) {
+  .form-set-main-div-mob {
+    width: 86%;
 }
 }
