--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -458,8 +458,12 @@ input {
         top: -4px !important;
         }
 }
-
-
+.thy-logo-pyment{
+    padding-left: 0;
+}
+.thankyou-page-container{
+    height: 100vh;
+}
 /* Media Query for low resolution  Tablets, Ipads */
 
 /* Media Query for Tablets Ipads portrait mode */
