--- a/src/App.css
+++ b/src/App.css
@@ -317,3 +317,13 @@ border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
 }
+html, body {
+  height: 100%;
+}
+#root {
+  height: 100%;
+}
+.page-content {
+  overflow: hidden;
+  overflow-y: auto;
+}
